--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - run: echo "Hello CI/CD"
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
+      - run: npm install -g sass
+
+      - run: sass scss:css
+
+      - run: mkdir dist
+
+      - run: cp -r css pages js index.html dist/
+
+      - run: zip -r dist.zip dist/
+
+      - run: ls -la .
 
 
