--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,21 +9,37 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: Checking out the latest
+        uses: actions/checkout@v3
+
+      - name: Installing Node JS
+        uses: actions/setup-node@v3
         with:
           node-version: 18
 
-      - run: npm install -g sass
+      - name: Installing SASS
+        run: npm install -g sass
 
-      - run: sass scss:css
+      - name: 'Compiling *.sass files to *.css'
+        run: sass scss:css
 
-      - run: mkdir dist
+      - name: create the dist directory
+        run: mkdir dist
 
-      - run: cp -r css pages js index.html dist/
+      - name: Copying everything to the dist directory
+        run: cp -r css pages js index.html dist/
 
-      - run: zip -r dist.zip dist/
+      - name: Creating a zip file for deployment
+        run: zip -r dist.zip dist/
 
-      - run: ls -la .
+      - name: List out the files
+        run: ls -la .
 
+      - name: Authenticating to GCP
+        uses: 'google-github-actions/auth@v0'
+        with:
+          credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+
+      - name: Setting the gcloud
+        uses: google-github-actions/setup-gcloud@v0
 
