--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,3 +43,5 @@ jobs:
       - name: Setting the gcloud
         uses: google-github-actions/setup-gcloud@v0
 
+      - name: Deploy the dist.zip
+        run: gcloud compute scp dist.zip dep-9-vm:/opt
