--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,32 @@ jobs:
       - name: Zipping to deploy
         run: zip -r dist.zip css pages js index.html
 
-      - name: Testing
-        run: ls -la
+      - name: Authenticate to Google Cloud
+        uses: 'google-github-actions/auth@v0'
+        with:
+          credentials_json: '${{ secrets.SERVICE_ACCOUNT_PRIVATE_KEY }}'
+
+      - name: 'Setting up gcloud'
+        uses: 'google-github-actions/setup-gcloud@v0'
+
+      - name: Deploy the dist.zip
+        run: gcloud compute scp dist.zip root@dep-9-vm:/opt/apache/apache-tomcat-10.1.1/webapps/lms
       
+      - name: Cleaning up old stuff
+        run: >
+          gcloud compute ssh --zone="asia-south1-a" dep-9-vm
+          --command="sudo rm -r 
+          /opt/apache/apache-tomcat-10.1.1/webapps/lms/css
+          /opt/apache/apache-tomcat-10.1.1/webapps/lms/pages
+          /opt/apache/apache-tomcat-10.1.1/webapps/lms/js
+          /opt/apache/apache-tomcat-10.1.1/webapps/lms/index.html"
+
+      - name: Extracting the zip
+        run: >
+          gcloud compute ssh --zone="asia-south1-a" dep-9-vm
+          --command "sudo unzip /opt/apache/apache-tomcat-10.1.1/webapps/lms/dist.zip"
+
+      - name: Cleaning left overs
+        run: >
+          gcloud compute ssh --zone="asia-south1-a" dep-9-vm
+          --command "sudo rm /opt/apache/apache-tomcat-10.1.1/webapps/lms/dist.zip"
