--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
         uses: 'google-github-actions/setup-gcloud@v0'
 
       - name: Deploy the dist.zip
-        run: gcloud compute scp dist.zip root@dep-9-vm:/opt/apache/apache-tomcat-10.1.1/webapps/lms
+        run: gcloud compute scp --zone="asia-south1-a" dist.zip root@dep-9-vm:/opt/apache/apache-tomcat-10.1.1/webapps/lms
       
       - name: Cleaning up old stuff
         run: >
