--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,4 +54,4 @@ jobs:
       - name: Cleaning left overs
         run: >
           gcloud compute ssh --zone="asia-south1-a" dep-9-vm
-          --command "sudo rm /opt/apache/apache-tomcat-10.1.1/webapps/lms/dist.zip"
+          --command "sudo rm /opt/apache/apache-tomcat-10.1.1/webapps/lms/dist.zip -d /opt/apache/apache-tomcat-10.1.1/webapps/lms/"
