--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Extracting the zip
         run: >
           gcloud compute ssh --zone="asia-south1-a" dep-9-vm
-          --command "sudo unzip /opt/apache/apache-tomcat-10.1.1/webapps/lms/"
+          --command "sudo unzip /opt/apache/apache-tomcat-10.1.1/webapps/lms/dist.zip"
 
       - name: Cleaning left overs
         run: >
